--- a/index.html
+++ b/index.html
@@ -16,23 +16,25 @@
 			</div>
 			<div>
 				<div class="col-12 content-height">
-					<h4>Content</h4>
-					<div class="col-8 entry-height">
-						<div class="col-12 entry">
-							<h4>Entry</h4>
-							
-						</div>
-						<div class="col-12 entry">
-							<h4>Entry</h4>
-							
-						</div>
-						<div class="col-12 entry">
-							<h4>Entry</h4>
+					<div class="content-body">
+						<h4>Content</h4>
+						<div class="col-8 entry-height">
+							<div class="col-12 entry">
+								<h4>Entry</h4>
 
+							</div>
+							<div class="col-12 entry">
+								<h4>Entry</h4>
+
+							</div>
+							<div class="col-12 entry">
+								<h4>Entry</h4>
+
+							</div>
 						</div>
-					</div>
-					<div class="col-3 sidebar-height">
-						<h4>Sidebar</h4>
+						<div class="col-3 sidebar-height">
+							<h4>Sidebar</h4>
+						</div>
 					</div>
 				</div>
 			</div>
